--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,6 @@ footer {
 section {
   max-width: 1200px;
   margin: 32px;
-  padding-right: 32px;
   border: 3px solid var(--secondary-color);
   border-radius: 5px;
   box-shadow: 5px 5px 10px var(--accent-color);
@@ -132,6 +131,10 @@ section {
 
 section > h2:first-child {
   margin: 16px 0 0 16px;
+}
+
+section ul {
+  padding: 0 32px;
 }
 
 /* Section Colors Start */
